@startuml

skinparam classAttributeIconSize 0

class Application {

}

package data {

    class Group {

    }

    class Email {

    }

    class Parser {

    }

    class Message {

    }

    Email -- Group
    Message -- Email
}

package prank {

    class PrankGenerator {

    }

    PrankGenerator -- Parser

}

package SMTP {

    class SMTPClient {

    }

    class SMTPProtocol {

    }

    SMTPClient -- SMTPProtocol
    Email - SMTPClient
}

Application - SMTPClient
Application - PrankGenerator

@end
